--- a/infrabookingapp/css/style.css
+++ b/infrabookingapp/css/style.css
@@ -2,6 +2,15 @@
     font-family: 'Roboto', sans-serif;
 }
 
+.image {
+    height: 180px;
+    width: 286px;
+}
+
+.room_details {
+    margin-top: 50px;
+}
+
 .nav_element {
     padding-left: 15px;
     padding-right: 15px;
@@ -32,6 +41,9 @@
     background-color: #621B36;
     color: white;
     text-align: center;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
 }
 
 .link {
@@ -50,8 +62,8 @@
 }
 
 .heading {
+    font-weight: bold;
     padding-top: 30px;
-    padding-bottom: -10px;
     text-align: center;
     color: #621B36;
 }
@@ -61,7 +73,7 @@
 }
 
 .mytable {
-    padding: 500px;
+    margin-top: 10%;
 }
 
 
@@ -73,7 +85,7 @@
 .line-1 {
     width: 24em;
     margin: 0 auto;
-    border-right: 2px solid rgba(255, 255, 255, .75);
+    border-right: 1px solid rgba(255, 255, 255, .75);
     font-size: 180%;
     text-align: center;
     white-space: nowrap;
