--- a/infrabookingapp/css/style.css
+++ b/infrabookingapp/css/style.css
@@ -22,9 +22,6 @@
 }
 
 .nav_element:hover {
-    /* background-color: #86475f;
-    overflow: hidden;
-     */
     font-weight: bold;
 }
 
@@ -41,7 +38,7 @@
     background-color: #621B36;
     color: white;
     text-align: center;
-    position: absolute;
+    position: fixed;
     width: 100%;
     bottom: 0;
 }
@@ -51,6 +48,11 @@
     text-align: center;
     font-size: 15px;
     margin-top: 20px;
+}
+
+.active_nav {
+    font-weight: bolder;
+    font-size: medium;
 }
 
 .link_text {
@@ -76,12 +78,6 @@
     margin-top: 10%;
 }
 
-
-/* table_row:hover {
-    border: #621B36;
-    background-color: aliceblue;
-} */
-
 .line-1 {
     width: 24em;
     margin: 0 auto;
@@ -92,9 +88,6 @@
     overflow: hidden;
     transform: translateY(-50%);
 }
-
-
-/* Animation */
 
 .anim-typewriter {
     animation: typewriter 4s steps(15) 1s infinite normal both, blinkTextCursor 500ms steps(15) infinite normal;
